docs/core/v0.19/_sources/reference/tmlt/core/transformations/spark_transformations/groupby/index.rst.txt



**************
groupby
**************

.. py:module:: tmlt.core.transformations.spark_transformations.groupby

.. autoapi-nested-parse::

   Transformations for performing groupby on Spark DataFrames.











Functions
=========

.. list-table::

   * - :func:`.create_groupby_from_column_domains`
     - Returns GroupBy transformation with Cartesian product of column domains as keys.
   * - :func:`.create_groupby_from_list_of_keys`
     - Returns a GroupBy transformation using user-supplied list of group keys.
   * - :func:`.compute_full_domain_df`
     - Returns a DataFrame containing the Cartesian product of given column domains.

.. py:function:: create_groupby_from_column_domains(input_domain, input_metric, use_l2, column_domains)

   Returns GroupBy transformation with Cartesian product of column domains as keys.

   .. rubric:: Example

   ..
       >>> from pyspark.sql import SparkSession
       >>> from pyspark.sql.functions import count
       >>> import pandas as pd
       >>> from tmlt.core.domains.spark_domains import (
       ...     SparkDataFrameDomain,
       ...     SparkStringColumnDescriptor,
       ... )
       >>> from tmlt.core.utils.misc import print_sdf
       >>> spark = SparkSession.builder.getOrCreate()
       >>> spark_dataframe = spark.createDataFrame(
       ...     pd.DataFrame(
       ...         {
       ...             "A": ["a1", "a2", "a3", "a3"],
       ...             "B": ["b1", "b1", "b2", "b2"],
       ...             "C": ["c1", "c2", "c1", "c1"],
       ...         }
       ...     )
       ... )

   >>> # Example input
   >>> print_sdf(spark_dataframe)
       A   B   C
   0  a1  b1  c1
   1  a2  b1  c2
   2  a3  b2  c1
   3  a3  b2  c1
   >>> groupby_B_C = create_groupby_from_column_domains(
   ...     input_domain=SparkDataFrameDomain(
   ...         {
   ...             "A": SparkStringColumnDescriptor(),
   ...             "B": SparkStringColumnDescriptor(),
   ...             "C": SparkStringColumnDescriptor(),
   ...         }
   ...     ),
   ...     input_metric=SymmetricDifference(),
   ...     use_l2=False,
   ...     column_domains={
   ...         "B": ["b1", "b2"],
   ...         "C": ["c1", "c2"],
   ...     }
   ... )
   >>> # Apply transformation to data
   >>> grouped_dataframe = groupby_B_C(spark_dataframe)
   >>> groups_df = grouped_dataframe.agg(count("*").alias("count"), fill_value=0)
   >>> print(groups_df.toPandas().sort_values(["B", "C"], ignore_index=True))
       B   C  count
   0  b1  c1      1
   1  b1  c2      1
   2  b2  c1      2
   3  b2  c2      0
   >>> # Note that the group key ("b2", "c2") does not appear in the DataFrame
   >>> # but appears in the aggregation output with the given fill value.

   :param input_domain: Domain of input DataFrames.
   :param input_metric: Metric on input DataFrames.
   :param use_l2: If True, use :class:`~.RootSumOfSquared` instead of :class:`~.SumOf`
                  in the output metric.
   :param column_domains: Mapping from column name to list of distinct values.

   .. note:: ``column_domains`` must be public.



.. py:function:: create_groupby_from_list_of_keys(input_domain, input_metric, use_l2, groupby_columns, keys)

   Returns a GroupBy transformation using user-supplied list of group keys.

   .. rubric:: Example

   ..
       >>> from pyspark.sql import SparkSession
       >>> from pyspark.sql.functions import count
       >>> import pandas as pd
       >>> from tmlt.core.domains.spark_domains import (
       ...     SparkDataFrameDomain,
       ...     SparkStringColumnDescriptor,
       ... )
       >>> from tmlt.core.utils.misc import print_sdf
       >>> spark = SparkSession.builder.getOrCreate()
       >>> spark_dataframe = spark.createDataFrame(
       ...     pd.DataFrame(
       ...         {
       ...             "A": ["a1", "a2", "a3", "a3"],
       ...             "B": ["b1", "b1", "b2", "b2"],
       ...             "C": ["c1", "c2", "c1", "c1"],
       ...         }
       ...     )
       ... )

   >>> # Example input
   >>> print_sdf(spark_dataframe)
       A   B   C
   0  a1  b1  c1
   1  a2  b1  c2
   2  a3  b2  c1
   3  a3  b2  c1
   >>> groupby_B_C = create_groupby_from_list_of_keys(
   ...     input_domain=SparkDataFrameDomain(
   ...         {
   ...             "A": SparkStringColumnDescriptor(),
   ...             "B": SparkStringColumnDescriptor(),
   ...             "C": SparkStringColumnDescriptor(),
   ...         }
   ...     ),
   ...     input_metric=SymmetricDifference(),
   ...     use_l2=False,
   ...     groupby_columns=["B", "C"],
   ...     keys=[("b1", "c1"), ("b2", "c2")]
   ... )
   >>> # Apply transformation to data
   >>> grouped_dataframe = groupby_B_C(spark_dataframe)
   >>> groups_df = grouped_dataframe.agg(count("*").alias("count"), fill_value=0)
   >>> print(groups_df.toPandas().sort_values(["B", "C"], ignore_index=True))
       B   C  count
   0  b1  c1      1
   1  b2  c2      0
   >>> # Note that there is no record corresponding to the key ("b1", "c2")
   >>> # since we did not specify this key while constructing the GroupBy even
   >>> # though this key appears in the input DataFrame.

   :param input_domain: Domain of input DataFrames.
   :param input_metric: Metric on input DataFrames.
   :param use_l2: If True, use :class:`~.RootSumOfSquared` instead of :class:`~.SumOf`
                  in the output metric.
   :param groupby_columns: List of column names to groupby.
   :param keys: List of distinct tuples corresponding to group keys.

   .. note:: ``keys`` must be public list of tuples with no duplicates.



.. py:function:: compute_full_domain_df(column_domains)

   Returns a DataFrame containing the Cartesian product of given column domains.




Classes
=======

.. list-table::

   * - :class:`.GroupBy`
     - Groups a Spark DataFrame by given group keys.

   
.. py:class:: GroupBy(input_domain, input_metric, use_l2, group_keys)

   Bases: :class:`tmlt.core.transformations.base.Transformation`

   Groups a Spark DataFrame by given group keys.

   Can also perform a "total aggregation", which puts the entire DataFrame into
   a single group.

   .. rubric:: Example

   ..
       >>> from pyspark.sql import SparkSession
       >>> from pyspark.sql.functions import count
       >>> import pandas as pd
       >>> from tmlt.core.domains.spark_domains import (
       ...     SparkDataFrameDomain,
       ...     SparkStringColumnDescriptor,
       ... )
       >>> from tmlt.core.utils.misc import print_sdf
       >>> spark = SparkSession.builder.getOrCreate()
       >>> spark_dataframe = spark.createDataFrame(
       ...     pd.DataFrame(
       ...         {
       ...             "A": ["a1", "a2", "a3", "a3"],
       ...             "B": ["b1", "b1", "b2", "b2"],
       ...         }
       ...     )
       ... )

   >>> # Example input
   >>> print_sdf(spark_dataframe)
       A   B
   0  a1  b1
   1  a2  b1
   2  a3  b2
   3  a3  b2
   >>> groupby_B = GroupBy(
   ...     input_domain=SparkDataFrameDomain(
   ...         {
   ...             "A": SparkStringColumnDescriptor(),
   ...             "B": SparkStringColumnDescriptor(),
   ...         }
   ...     ),
   ...     input_metric=SymmetricDifference(),
   ...     use_l2=False,
   ...     group_keys=spark.createDataFrame(
   ...         pd.DataFrame(
   ...             {
   ...                 "B":["b1", "b2"]
   ...             }
   ...         )
   ...     )
   ... )
   >>> # Apply transformation to data
   >>> grouped_dataframe = groupby_B(spark_dataframe)
   >>> counts_df = grouped_dataframe.agg(count("*").alias("count"), fill_value=0)
   >>> print(counts_df.sort("B").toPandas())
       B  count
   0  b1      2
   1  b2      2

   Transformation Contract:
       * Input domain - :class:`~.SparkDataFrameDomain`
       * Output domain - :class:`~.SparkGroupedDataFrameDomain`
       * Input metric - :class:`~.SymmetricDifference` or :class:`~.HammingDistance`
         or :class:`~.IfGroupedBy` (with inner metric :class:`~.SymmetricDifference`)
       * Output metric - :class:`~.SumOf` or :class:`~.RootSumOfSquared` of
         :class:`~.SymmetricDifference`

       >>> groupby_B.input_domain
       SparkDataFrameDomain(schema={'A': SparkStringColumnDescriptor(allow_null=False), 'B': SparkStringColumnDescriptor(allow_null=False)})
       >>> groupby_B.output_domain
       SparkGroupedDataFrameDomain(schema={'A': SparkStringColumnDescriptor(allow_null=False), 'B': SparkStringColumnDescriptor(allow_null=False)}, groupby_columns={'B'})
       >>> groupby_B.input_metric
       SymmetricDifference()
       >>> groupby_B.output_metric
       SumOf(inner_metric=SymmetricDifference())

       Stability Guarantee:
           :class:`~.GroupBy`'s :meth:`~stability_function` returns the ``d_in`` if the
           ``input_metric`` is :class:`~.SymmetricDifference` or
           :class:`~.IfGroupedBy`, otherwise it returns ``d_in`` times ``2``.

           >>> groupby_B.stability_function(1)
           1






   .. py:property:: use_l2
      :type: bool


      Returns whether the output metric will use :class:`~.RootSumOfSquared`.

   .. py:property:: group_keys
      :type: Optional[pyspark.sql.DataFrame]


      Returns DataFrame containing group keys, or None for a total aggregation.

   .. py:property:: groupby_columns
      :type: List[str]


      Returns list of columns to groupby.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain


      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric


      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain


      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric


      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      :param d_in: Distance between inputs under ``input_metric``.


   .. py:method:: __call__(sdf)

      Performs groupby.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.






